Added compton file and updated i3 config for transparency

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -175,3 +175,12 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Auto execution
+exec i3-config-wizard
+exec --no-startup-id nm-applet
+exec --no-startup-id blueman-applet
+
+new_window pixel
+exec --no-startup-id compton -cCGb --backend glx --vsync opengl
+exec ~/.fehbg &
